# mocopi_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/rviz/: mocopi_view.rviz
scripts/: mocopi_receiver.py
