<?xml version="1.0"?>
<package format="2">
  <name>mocopi_ros</name>
  <version>0.0.1</version>
  <description>send motion data that from mocopi to TF</description>

  <maintainer email="tekitooo.de.iiya@gmail.com">teto IIYA</maintainer>
  <maintainer email="banba.rintaro.hwl@gmail.com">rintaro BANBA</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>

</package>
